apps/loki/03-loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: loki
  ports:
    - name: http
      port: 3100
      targetPort: 3100
