apps/loki/promtail-metrics-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: promtail-metrics
  namespace: monitoring
spec:
  selector:
    app: promtail
  ports:
    - name: http-metrics
      port: 9080
      targetPort: http-metrics
      protocol: TCP
  type: ClusterIP
